--- a/src/app/vehículos/form-pais/form-pais.component.html
+++ b/src/app/vehículos/form-pais/form-pais.component.html
@@ -22,7 +22,7 @@
              </div>
          </div>
                                          <!-- cuando hago click al boton me lleva al metodo create que esta en app.component   -->             
-         <button class="btn btn-success" role="button" (click)='create()' >Registrar</button>
+         <button class="btn btn-warning" role="button" (click)='create()' >Registrar</button>
      </form>
  </div>
 
